--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,21 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gtalk"
-version = "1.0.5"
-description = "A command-line interface to interact with Google's AI Mode"
+version = "1.0.6"
+description = "Interactive terminal interface for Google AI Mode - get AI-powered answers, code examples, and explanations directly in your command line"
 readme = "README.md"
 authors = [
     {name = "Md. Sazzad Hissain Khan", email = "hissain.khan@gmail.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "Intended Audience :: Science/Research",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
+    "Topic :: Utilities",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -22,8 +26,29 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Operating System :: OS Independent",
+    "Operating System :: MacOS",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: Microsoft :: Windows",
+    "Environment :: Console",
+    "Natural Language :: English",
 ]
-keywords = ["google", "ai", "cli", "terminal", "search", "assistant"]
+keywords = [
+    "google",
+    "ai",
+    "aimode",
+    "cli",
+    "terminal",
+    "search",
+    "assistant",
+    "chatbot",
+    "artificial-intelligence",
+    "command-line",
+    "interactive",
+    "code-examples",
+    "query",
+    "open-source",
+]
 dependencies = [
     "selenium>=4.15.0",
     "beautifulsoup4>=4.12.0",
@@ -35,6 +60,13 @@ Homepage = "https://github.com/hissain/gtalk"
 Documentation = "https://github.com/hissain/gtalk#readme"
 Repository = "https://github.com/hissain/gtalk"
 "Bug Tracker" = "https://github.com/hissain/gtalk/issues"
+Changelog = "https://github.com/hissain/gtalk/releases"
 
 [project.scripts]
-gtalk = "gtalk.cli:main"
+gtalk = "gtalk.cli:cli"
+
+[tool.setuptools]
+packages = ["gtalk"]
+
+[tool.setuptools.package-data]
+gtalk = ["py.typed"]
